--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
 
       - name: Run a multi-line script
         run: |
-          npm run wdio,allure generate [allure-results] && allure open
+          npm run wdio
+          npx allure generate [allure-results] && allure open
           
           
       - name: Publish Report
